Express server to serve static pages

--- a/public/list.html
+++ b/public/list.html
@@ -36,14 +36,14 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">The jobs of the future</h1>
+            <h1 class="cover-heading"></h1>
           </div>
 
             <div class="row">
 
               <div class="col-sm-6 col-md-2">
                 <div class="thumbnail">
-                  <img data-src="holder.js/300x300" alt="..." src="Tweet-for-a-job.jpg">
+                  <img data-src="holder.js/300x300" alt="..." src="./images/Tweet-for-a-job.jpg">
                   <div class="caption">
                     <h3>Spaceship Captain</h3>
                     <p>Planet Labs is looking for a talented, well-rounded scientist-engineer to pilot its growing fleet of satellites.
@@ -62,7 +62,7 @@
 
               <div class="col-sm-6 col-md-2">
                 <div class="thumbnail">
-                  <img data-src="holder.js/300x300" alt="..." src="Tweet-for-a-job.jpg">
+                  <img data-src="holder.js/300x300" alt="..." src="./images/Tweet-for-a-job.jpg">
                   <div class="caption">
                     <h3>Chief Happiness Officer</h3>
                     <p>Engaging employees, motivating them and raising performance levels are all HR attributions. Whilst these are the most common responsibilities used to describe the CHO position, there are many more HR areas where happiness matters.
@@ -72,7 +72,7 @@
               </div>
               <div class="col-sm-6 col-md-2">
                 <div class="thumbnail">
-                  <img data-src="holder.js/300x300" alt="..." src="Tweet-for-a-job.jpg">
+                  <img data-src="holder.js/300x300" alt="..." src="./images/Tweet-for-a-job.jpg">
                   <div class="caption">
                     <h3>Robot Counsellor</h3>
                     <p>As robots start to play even larger roles in our lives, wealthy people will own robots who act as servants or caregivers. People looking to purchase robots for their homes will work with robot counselors to determine which model is best suited to a family's particular needs. If a robot does not fit in with the family, the counsellor will be on hand to determine better options and to provide care and customer service.
