--- a/public/list.html
+++ b/public/list.html
@@ -70,6 +70,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-sm-6 col-md-2">
                 <div class="thumbnail">
                   <img data-src="holder.js/300x300" alt="..." src="./images/Tweet-for-a-job.jpg">
@@ -81,6 +82,16 @@
                 </div>
               </div>
               
+              <div class="col-sm-6 col-md-2">
+                <div class="thumbnail">
+                  <img data-src="holder.js/300x300" alt="..." src="./images/space-garden.jpg">
+                  <div class="caption">
+                    <h3>Space Gardener</h3>
+                    <p>Flower bouquet into space</p>                    
+                  </div>
+                </div>
+              </div>
+
             </div>
         </div>
       </div>
