Final details(js and redis)

--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,11 @@
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Mapping Josters (jobs/stories)</h3>
+              <h3 class="masthead-brand">Mapping Jobs/Stories</h3>
               <ul class="nav masthead-nav">
                 <li class="active"><a href="#">Why</a></li>
-                <li><a href="./list.html">Explore</a></li>
-                <li><a href="./addNew.html">Contribute</a></li>
+                <li><a href="./explore.html">Explore</a></li>
+                <li><a href="./contribute.html">Contribute</a></li>
               </ul>
             </div>
           </div>
