--- a/public/explore.html
+++ b/public/explore.html
@@ -37,20 +37,17 @@
           <div class="inner cover">
             <h1 class="cover-heading"></h1>
           </div>
-
-            <div class="row">
-              <div id="target">Loading...</div>
-            </div>
+          <div>
+            <div id="target">Loading...</div>
+          </div>
             
         </div>
       </div>
-
     </div>
 
     <script id="template" type="x-tmpl-mustache">
       {{#items}}
-      <div class="col-xs-12 col-sm-6 col-md-2">
-          <div class="thumbnail">
+          <div class="thumbnail story">
             <img alt="..." src="./images/Tweet-for-a-job.jpg">
             <div class="caption">
               <h3>{{title}}</h3>
@@ -59,7 +56,6 @@
               <p>{{skillset}}</p>
             </div>
           </div>
-      </div>
       {{/items}}
 
     </script>
